# SLMP

./: LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  ErrorBoundary.tsx  Visualizer.tsx  api.ts  lyrics.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
