[package]
name = "fluent-music-player"
version = "0.3.0"
description = "A stable responsive Fluent-inspired music player powered by Rust and Tauri"
authors = ["OpenAI"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fluent_music_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"
